--- a/defaults.yml
+++ b/defaults.yml
@@ -29,6 +29,8 @@ defaults:
     stern_pvc: "stern-data-vol01"
   pgrest:
     postgres_pvc: "pgrest-postgres-vol01"
+  proxy:
+    site_router_pvc: "site-router-redis-vol1"
   security-kernel:
     postgres_pvc: "sk-postgres-vol01"
   streams:
