--- a/templates/notifications/postgres.yml
+++ b/templates/notifications/postgres.yml
@@ -28,12 +28,12 @@ spec:
         - name: TOKENS_SERVICE_URL
           valueFrom:
             configMapKeyRef:
-              name: global-config
+              name: notifications-config
               key: service_tenant_base_url
         - name: TENANTS_SERVICE_URL
           valueFrom:
             configMapKeyRef:
-              name: global-config
+              name: notifications-config
               key: service_tenant_base_url
         - name: POSTGRES_PASSWORD
           valueFrom:
