--- a/templates/admin/util2.yml
+++ b/templates/admin/util2.yml
@@ -12,7 +12,7 @@ spec:
     - name: service_tenant_base_url
       valueFrom:
         configMapKeyRef:
-          name: global-config
+          name: admin-config
           key: service_tenant_base_url
     volumeMounts:
     - name: tenants-config
@@ -21,5 +21,5 @@ spec:
   volumes:
   - name: tenants-config
     configMap:
-      name: global-config
+      name: admin-config
 
