Updated tokens defaults

--- a/defaults.yml
+++ b/defaults.yml
@@ -45,6 +45,8 @@ defaults:
     postgres_pvc: "systems-postgres-vol01"
   tenants:
     postgres_pvc: "tenants-postgres-vol01"
+  tokens:
+    use_sk: "true"
   vault:
     pvc: "vault-vol01"
     raft_storage: "true"
