--- a/input_files/test_input.yml
+++ b/input_files/test_input.yml
@@ -715,6 +715,14 @@ skadmin:
       file_ext: ".json"
       template: "tapis-systems-secrets.j2"
       data:
+    tapis-tenants-publickeys:
+      file_ext: ".json"
+      template: "tapis-tenants-publickeys.j2"
+      data:
+    tapis-tenants-secrets:
+      file_ext: ".json"
+      template: "tapis-tenants-secrets.j2"
+      data:
     tapis-tokens-secrets:
       file_ext: ".json"
       template: "tapis-tokens-secrets.j2"
@@ -887,6 +895,7 @@ tenants:
     data:
       service_name: "tenants"
       postgres_pvc: "tenants-postgres-vol02"
+      image_version: test
   tenants-config:
     file_ext: ".yml"
     template: tenants-config.j2
@@ -900,7 +909,6 @@ tenants:
       file_ext: ".yml"
       template: api.j2
       data:
-        image_version: dev
         image_pull: Always
   postgres:
     deploy:
