set use_sk=true everywhere

--- a/templates/streams/api/streams-config-local.json
+++ b/templates/streams/api/streams-config-local.json
@@ -2,7 +2,7 @@
   "service_name": "streams",
   "tenant": "dev",
   "tenants": ["dev"],
-  "use_sk": false,
+  "use_sk": true,
   "log_level": "DEBUG",
   "show_traceback": false,
   "dev_token": "sometoken",
