--- a/templates/tenants/api/api.yml
+++ b/templates/tenants/api/api.yml
@@ -13,8 +13,8 @@ spec:
     spec:
       containers:
       - name: tenants-api
-        image: tapis/tenants-api:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]))}}
-        imagePullPolicy: {{local_param["image_pull"]|default(service_param["image_pull"]|default(universal_param["image_pull"]|default(defaults["image_pull"])))}}
+        image: tapis/tenants-api:{{ tenants_image_version }}
+        imagePullPolicy: {{ tenants_image_pull_policy }}
         ports:
         - name: http
           containerPort: 5000
