--- a/templates/tenants/tenants-config.yml
+++ b/templates/tenants/tenants-config.yml
@@ -5,10 +5,10 @@ metadata:
 data:
   tenants-config.json: |-
     {
-      "primary_site_admin_tenant_base_url": "{{universal_param["service_url"]}}",
-      "service_site_id": "{{universal_param["service_site_id"]}}",
-      "service_tenant_id": "{{universal_param["service_tenant_id"]}}",
-      "service_name": "{{service_param["service_name"]}}",
+      "primary_site_admin_tenant_base_url": "{{ tenants_primary_site_admin_tenant_base_url }}",
+      "service_site_id": "{{ tenants_service_site_id" }}",
+      "service_tenant_id": "{{ tenants_service_tenant_id }}",
+      "service_name": "{{ tenants_service_name }}",
       "postgres_user": "{{local_param["postgres_user"]|default(service_param["postgres_user"]|default(universal_param["postgres_user"]))}}",
       "tenants": ["*"],
       "use_sk": {{local_param["use_sk"]|default(service_param["use_sk"]|default(universal_param["use_sk"]|default(true)))|tojson}},
