--- a/templates/tokens/api.yml
+++ b/templates/tokens/api.yml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: tokens-api
-        image: tapis/tokens-api:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]))}}
+        image: tapis/tokens-api:{{tokens_image_version}}
         imagePullPolicy: Always
         ports:
         - name: http
@@ -23,7 +23,7 @@ spec:
           valueFrom:
             secretKeyRef:
               name: tapis-tokens-secrets
-              key: {{universal_param["service_tenant_id"]}}-privatekey
+              key: {{tokens_service_tenant_id]}}-privatekey
         volumeMounts:
         - name: tokens-config
           mountPath: /home/tapis/config.json
