--- a/templates/monitoring/secrets.yml
+++ b/templates/monitoring/secrets.yml
@@ -7,5 +7,5 @@ metadata:
   name: grafana-admin
 type: Opaque
 data:
-  username: {{local_param["username"]}}
-  password: {{local_param["password"]}}
+  username: {{monitoring_service_grafana_username}}
+  password: {{monitoring_service_grafana_password}}
