--- a/templates/proxy/nginx/nginx.conf
+++ b/templates/proxy/nginx/nginx.conf
@@ -44,7 +44,7 @@ http {
     
         # Edit the server_name to reflect the site domain.
         #server_name *.develop.tapis.io;
-        server_name  {{service_param["nginx_server_name"]}};
+        server_name  {{proxy_nginx_server_name}};
         #server_name *.*.tapis.io;
         #server_name  _;
     
@@ -78,7 +78,7 @@ http {
         # Edit the server_name the reflect the site domain.
         #server_name  _;
         #server_name *.develop.tapis.io;
-        server_name  {{service_param["nginx_server_name"]}}
+        server_name  {{proxy_nginx_server_name}}
         #server_name *.*.tapis.io;
     
         # Update these paths the correct cer and key files.
@@ -115,7 +115,7 @@ http {
     #    {
     #        rewrite https://tapis.io break;
     #    }
-        {% if "authenticator" in service_list %}
+        {% if "authenticator" in proxy_nginx_service_list %}
         location /v3/oauth2
         {
     #        auth_request /_auth;
@@ -141,7 +141,7 @@ http {
            proxy_redirect off;
            proxy_set_header Host $host;
         }
-        {% if "security" in service_list %} 
+        {% if "security" in proxy_nginx_service_list %} 
         location /v3/security
         {
     #        auth_request /_auth;
@@ -150,7 +150,7 @@ http {
             proxy_set_header Host localhost:5000;
         } 
         {% endif %}
-        {% if "tenants" in service_list %}
+        {% if "tenants" in proxy_nginx_service_list %}
         location /v3/tenants
         {
     
@@ -184,7 +184,7 @@ http {
             proxy_pass https://admin.develop.tapis.io/v3/site-router/check;
           }
     
-        {% if "tenants" in service_list %}
+        {% if "tenants" in proxy_nginx_service_list %}
         location /v3/sites
         {
     #        auth_request /_auth;
@@ -193,7 +193,7 @@ http {
             proxy_set_header Host localhost:5000;
         }
         {% endif %}
-        {% if "meta" in service_list %}
+        {% if "meta" in proxy_nginx_service_list %}
         location /v3/meta
         {
     #        auth_request /_auth;
@@ -202,7 +202,7 @@ http {
             proxy_set_header Host localhost:5000;
         }
         {% endif %}
-        {% if "streams" in service_list %}
+        {% if "streams" in proxy_nginx_service_list %}
         location /v3/streams
         {
     #        auth_request /_auth;
@@ -219,7 +219,7 @@ http {
             }
         }
         {% endif %}
-        {% if "files" in service_list %}
+        {% if "files" in proxy_nginx_service_list %}
         location /v3/files
         {
     #        auth_request /_auth;
@@ -229,7 +229,7 @@ http {
             client_max_body_size 50G;
         }
         {% endif %}
-        {% if "systems" in service_list %}
+        {% if "systems" in proxy_nginx_service_list %}
         location /v3/systems
         {
     #        auth_request /_auth;
@@ -238,7 +238,7 @@ http {
             proxy_set_header Host localhost:5000;
         }
         {% endif %}
-        {% if "tokens" in service_list %}
+        {% if "tokens" in proxy_nginx_service_list %}
         location /v3/tokens
         {
             # we intentionally do NOT include an auth_request for Tokens because tokens only handles service requests.
@@ -247,7 +247,7 @@ http {
             proxy_set_header Host localhost:5000;
         }
         {% endif %}
-        {% if "jobs" in service_list %}
+        {% if "jobs" in proxy_nginx_service_list %}
         location /v3/jobs
         {
     #        auth_request /_auth;
@@ -256,7 +256,7 @@ http {
             proxy_set_header Host localhost:5000;
         }
         {% endif %}
-        {% if "actors" in service_list %}
+        {% if "actors" in proxy_nginx_service_list %}
         location /v3/actors
         {
     #        auth_request /_auth;
@@ -265,7 +265,7 @@ http {
             proxy_set_header Host $host;
         }
         {% endif %}        
-        {% if "apps" in service_list %}
+        {% if "apps" in proxy_nginx_service_list %}
         location /v3/apps
         {
     #        auth_request /_auth;
@@ -274,7 +274,7 @@ http {
             proxy_set_header Host localhost:5000;
         }
         {% endif %}
-        {% if "monitoring" in service_list %}
+        {% if "monitoring" in proxy_nginx_service_list %}
         location /grafana/
         {
             proxy_pass http://monitoring-grafana:3000;
@@ -282,7 +282,7 @@ http {
             proxy_set_header Host $host;
         }
         {% endif %}
-        {% if "pgrest" in service_list %}
+        {% if "pgrest" in proxy_nginx_service_list %}
         location /v3/pgrest
         {
     #        auth_request /_auth;
@@ -291,7 +291,7 @@ http {
             proxy_set_header Host $host;
         }
         {% endif %}
-        {% if "notifications" in service_list %}
+        {% if "notifications" in proxy_nginx_service_list %}
         location /v3/notifications
         {
     #        auth_request /_auth;
