--- a/templates/monitoring/apps/elasticsearch.yml
+++ b/templates/monitoring/apps/elasticsearch.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: monitoring-elasticsearch
-        image: docker.elastic.co/elasticsearch/elasticsearch:7.6.2
+        image: {{monitoring_service_elasticsearch_image}}
         ports:
         - name: el1
           containerPort: 9200
@@ -24,18 +24,12 @@ spec:
         env:
         - name: discovery.type
           value: single-node
-        {% if local_param["max_buckets"]==true%}
         - name: search.max_buckets
           value: "65535"
-        {% endif %}
-        {% if local_param["volume_mounts"]==true%}
         volumeMounts:
         - name: elasticsearch-data
           mountPath: /usr/share/elasticsearch/data
-        {% endif %}
-      {% if local_param["volumes"]==true%}
       volumes:
       - name: elasticsearch-data
         persistentVolumeClaim:
-          claimName: {{service_param["elastic_pvc"]}}
-      {% endif %}
+          claimName: {{monitoring_service_elasticsearch_pvc}}
