--- a/templates/monitoring/monitoring-config.yml
+++ b/templates/monitoring/monitoring-config.yml
@@ -3,10 +3,10 @@ kind: ConfigMap
 metadata: 
   name: monitoring-config
 data:
-  "service_site_url": "{{universal_param["service_url"]}}"
-  "service_tenant_id": "{{universal_param["service_tenant_id"]}}"
-  "site_id": "{{universal_param["service_site_id"]}}"
-  "service_name": "{{service_param["service_name"]}}"
+  "service_site_url": "{{monitoring_service_url}}"
+  "service_tenant_id": "{{monitoring_service_tenant_id}}"
+  "site_id": "{{monitoring_service_site_id}}"
+  "service_name": "{{monitoring_service_name}}"
   prometheus-config.yml: |-
     # my global config
     global:
