--- a/templates/proxy/site-router/site-router-config.yml
+++ b/templates/proxy/site-router/site-router-config.yml
@@ -5,10 +5,10 @@ metadata:
 data:
   site-router-config.json: |-
     {
-      "primary_site_admin_tenant_base_url": "{{universal_param["service_url"]}}",
-      "service_site_id": "{{universal_param["service_site_id"]}}",
-      "service_tenant_id": "{{universal_param["service_tenant_id"]}}",
-      "service_name": "{{service_param["service_name"]}}",
+      "primary_site_admin_tenant_base_url": "{{proxy_service_tenant_base_url}}",
+      "service_site_id": "{{proxy_service_site_id}}",
+      "service_tenant_id": "{{proxy_service_tenant_id}}",
+      "service_name": "{{proxy_service_name}}",
       "tenants": ["*"],
       "redis_host": "localhost"
     }
