--- a/templates/streams/kapacitor/pvc.yml
+++ b/templates/streams/kapacitor/pvc.yml
@@ -1,12 +1,12 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{service_param["kapacitor_pvc"]}}
+  name: {{streams_kapacitor_pvc}}
 
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: {{universal_param["storage_class"]}}
+  storageClassName: {{streams_storage_class}}
   resources:
     requests:
       storage: 20Gi
@@ -35,5 +35,5 @@ spec:
       volumes:
       - name: streams-kapacitor-data
         persistentVolumeClaim:
-          claimName: {{service_param["kapacitor_pvc"]}}
+          claimName: {{streams_kapacitor_pvc}}
 
