--- a/templates/container-registry/container-registery-config.yml
+++ b/templates/container-registry/container-registery-config.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata: 
-  name: container-registery-config
+  name: container-registry-config
 data:
-  "service_site_url": "{{universal_param["service_url"]}}"
-  "service_tenant_id": "{{universal_param["service_tenant_id"]}}"
-  "site_id": "{{universal_param["service_site_id"]}}"
-  "service_name": "{{service_param["service_name"]}}"
+  "service_site_url": "{{container-registry_service_url}}"
+  "service_tenant_id": "{{container-registry_service_tenant_id}}"
+  "site_id": "{{container-registry_service_site_id}}"
+  "service_name": "{{container-registry_service_name}}"
