--- a/templates/pgrest/postgres-deploy.yml
+++ b/templates/pgrest/postgres-deploy.yml
@@ -35,4 +35,4 @@ spec:
       volumes:
       - name: pgrest-data
         persistentVolumeClaim:
-          claimName: {{service_param["postgres_pvc"]}}
+          claimName: {{pgrest_postgres_pvc}}
