--- a/templates/streams/influx/deploy.yml
+++ b/templates/streams/influx/deploy.yml
@@ -43,4 +43,4 @@ spec:
       volumes:
       - name: influx-data
         persistentVolumeClaim:
-          claimName: {{service_param["influx_pvc"]}}
+          claimName: {{streams_influx_pvc}}
