--- a/templates/streams/influx2/deploy.yml
+++ b/templates/streams/influx2/deploy.yml
@@ -41,5 +41,5 @@ spec:
       volumes:
       - name: influx-data
         persistentVolumeClaim:
-          claimName: {{service_param["influx2_pvc"]}}
+          claimName: {{streams_influx2_pvc}}
 
