--- a/templates/streams/kapacitor-config.yml
+++ b/templates/streams/kapacitor-config.yml
@@ -3,10 +3,10 @@ kind: ConfigMap
 metadata:
   name: kapacitor-config
 data:
-  "service_site_url": "{{universal_param["service_url"]}}"
-  "service_tenant_id": "{{universal_param["service_tenant_id"]}}"
-  "site_id": "{{universal_param["service_site_id"]}}"
-  "service_name": "{{service_param["service_name"]}}"
+  "service_site_url": "{{streams_service_url}}"
+  "service_tenant_id": "{{streams_service_tenant_id}}"
+  "site_id": "{{streams_service_site_id}}"
+  "service_name": "{{streams_service_name}}"
   kapacitor.conf: |- 
     hostname = "7ba03c77345a"
     data_dir = "/var/lib/kapacitor"
@@ -176,10 +176,10 @@ data:
       token = ""
       user-key = ""
       url = "https://api.pushover.net/1/messages.json"
-    {% for tenant, value in local_param["tenant"].items() %}
+    {% for tenant, value in streams_tenant.items() %}
     [[httppost]]
       endpoint = "api-alert-{{tenant}}"
-      url = "{{value["tapis_base_url"]}}/v3/streams/alerts?tenant=dev"
+      url = "{{streams_tapis_base_url}}/v3/streams/alerts?tenant=dev"
       headers = {"Content-Type" = "application/json","alert-secret" = "testalert"}
       alert-template = ""
       alert-template-file = ""
