--- a/templates/streams/streams-config.yml
+++ b/templates/streams/streams-config.yml
@@ -3,20 +3,20 @@ kind: ConfigMap
 metadata:
   name: streams-config
 data:
-  "service_site_url": "{{universal_param["service_url"]}}"
-  "service_tenant_id": "{{universal_param["service_tenant_id"]}}"
-  "site_id": "{{universal_param["service_site_id"]}}"
-  "service_name": "{{service_param["service_name"]}}"
+  "service_site_url": "{{streams_service_url}}"
+  "service_tenant_id": "{{streams_service_tenant_id}}"
+  "site_id": "{{streams_service_site_id}}"
+  "service_name": "{{streams_service_name}}"
   streams-config.json: |-
     {
-      "primary_site_admin_tenant_base_url": "{{universal_param["service_url"]}}",
-      "service_admin_tenant_id": "{{universal_param["service_tenant_id"]}}",
-      "service_tenant_id": "{{universal_param["service_site_id"]}}",
-      "service_name": "{{service_param["service_name"]}}",
-      "tenant": {{local_param["tenant"]|default(service_param["tenant"]|default(universal_param["tenant"]))|tojson}},
-      "tenants": {{universal_param["tenants"]|default(["dev", "admin"])|tojson}},
-      "log_level": "{{local_param["log_level"]|default("DEBUG")}}",
-      "show_traceback": {{local_param["show_traceback"]|default("false")|tojson}},
+      "primary_site_admin_tenant_base_url": "{{streams_service_url}}",
+      "service_admin_tenant_id": "{{streams_service_tenant_id}}",
+      "service_tenant_id": "{{streams_service_site_id}}",
+      "service_name": "{{streams_service_name}}",
+      "tenant": {{streams_tenant}},
+      "tenants": {{streams_tenants|default(["dev", "admin"])|tojson}},
+      "log_level": "{{streams_log_level|default("DEBUG")}}",
+      "show_traceback": {{streams_show_traceback|default("false")|tojson}},
       "chords_url": "http://chords-app:80",
       "chords_user_email": "streams@admin.tapis",
       "influxdb_host": "http://chords-influxdb2",
@@ -29,7 +29,7 @@ data:
       "kapacitor_username": "admin",
       "kapacitor_port": "9092",
       "ignore_auth": true,
-      "influxdb_token": "{{local_param["influxdb_token"]|default(service_param["influxdb_token"])}}",
+      "influxdb_token": "{{streams_influxdb_token"}}",
       "influxdb_bucket": "streams",
       "influxdb_org": "tapis"
     }
