--- a/templates/tenants/postgres/deploy.yml
+++ b/templates/tenants/postgres/deploy.yml
@@ -35,4 +35,4 @@ spec:
       volumes:
       - name: tenants-pg-data
         persistentVolumeClaim:
-          claimName: {{service_param["postgres_pvc"]}}
+          claimName: {{tenants_postgres_pvc}}
