--- a/templates/tenants/postgres/migrations.yml
+++ b/templates/tenants/postgres/migrations.yml
@@ -10,8 +10,8 @@ spec:
       restartPolicy: Never
       containers:
       - name: tenants-migrations
-        image: tapis/tenants-api-migrations:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]))}}
-        imagePullPolicy: {{local_param["image_pull"]|default(service_param["image_pull"]|default(universal_param["image_pull"]|default(defaults["image_pull"])))}}
+        image: tapis/tenants-api-migrations:{{tenants_image_version}}
+        imagePullPolicy: {{tenants_image_pull}}
         args: ["upgrade"]
         env:
         - name: sql_db_url
