--- a/templates/actors/api/rabbit.yml
+++ b/templates/actors/api/rabbit.yml
@@ -38,5 +38,5 @@ spec:
       volumes:
       - name: actors-rabbitmq-data
         persistentVolumeClaim:
-          claimName: {{service_param["rabbit_pvc"]}}
+          claimName: {{actors_rabbit_pvc}}
 
