--- a/templates/actors/backup/actors-mongo-backup-pvc.yml
+++ b/templates/actors/backup/actors-mongo-backup-pvc.yml
@@ -1,11 +1,11 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{service_param["mongo_backup_pvc"]}}
+  name: {{actors_mongo_backup_pvc}}
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: rbd-new
+  storageClassName: {{actors_storage_class}}
   resources:
     requests:
       storage: 10Gi
