--- a/templates/actors/backup/actors-mongo-backup.yml
+++ b/templates/actors/backup/actors-mongo-backup.yml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: actors-mongo-backup
-          image: tapis/mongobackup:0.1
+          image: {{actors_mongo_image}}
           imagePullPolicy: Always
           command: ["/bin/bash"]
           args: ["-c", "/scripts/script.sh && cron && tail -f /var/log/cron.log"]
@@ -36,10 +36,10 @@ spec:
                   name: tapis-abaco-secrets
                   key: mongo-password
           volumeMounts:
-            - name: {{service_param["mongo_backup_pvc"]}}
+            - name: {{actors_mongo_backup_pvc}}
               mountPath: /backup/
       volumes:
-        - name: {{service_param["mongo_backup_pvc"]}}
+        - name: {{actors_mongo_backup_pvc}}
           persistentVolumeClaim:
-            claimName: {{service_param["mongo_backup_pvc"]}}
+            claimName: {{actors_mongo_backup_pvc}}
 
