fix typo and misnamed actor's variable

--- a/templates/actors/api/configmap.yml
+++ b/templates/actors/api/configmap.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 metadata:
   name: actors-environment-vars
 data:
-  abaco_host_path: "/home/apim/{{abaco_host_path}}"
+  abaco_host_path: "/home/apim/{{actors_host_path}}"
   _abaco_secret: "123"
   TAS_ROLE_ACCT: ""
   TAS_ROLE_PASS: ""
