--- a/templates/authenticator/authenticator-config.yml
+++ b/templates/authenticator/authenticator-config.yml
@@ -11,7 +11,7 @@ data:
       "service_site_id": "{{authenticator_service_site_id}}",
       "service_tenant_id": "{{authenticator_service_tenant_id}}",
       "service_name": "{{service_param["service_name}}",
-      "tenants": {{authenticator_"tenants|default(["dev", "admin"])|tojson}},
+      "tenants": {{authenticator_tenants|default(["dev", "admin"])|tojson}},
       "sql_db_url": "authenticator-postgres:5432/authenticator",
       "log_level": "{{authenticator_log_level|default(defaults["log_level"])}}"
     }
