--- a/templates/monitoring/monitoring-config.yml
+++ b/templates/monitoring/monitoring-config.yml
@@ -45,13 +45,13 @@ data:
         metrics_path: '/v1/sys/metrics'
         params:
           format: ['prometheus']
-        scheme: {%-if "https" in universal_param["vault_url"] -%} 
+        scheme: {%-if "https" in monitoring_vault_url -%} 
          https 
         {% else -%} 
          http 
         {% endif %}
         static_configs:
-        - targets: ['{{universal_param["vault_url"] | replace('http://', "") | replace('https://', "")}}']
+        - targets: ['{{monitoring_vault_url | replace('http://', "") | replace('https://', "")}}']
   # monitoring: grafana prometheus resources
   grafana-datasources.yaml: |-
     {
